--- a/src/components/elements/Input/input.module.scss
+++ b/src/components/elements/Input/input.module.scss
@@ -21,7 +21,7 @@
     border: 1px solid;
     border-color: $neutral-300;
     border-radius: 4px;
-    padding: 14px 16px;
+    padding: 12px 14px;
     transition: all 0.1s ease-out;
 
     &:disabled {
@@ -127,7 +127,7 @@
   }
 
   &_helperTextContainer {
-    margin: 8px 0;
+    margin: 8px 0 0 0;
     text-align: left;
   }
 
