--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -29,6 +29,11 @@ body {
 }
 
 // DataTable
+.data-table-custom-ul {
+  margin: 0;
+  padding: 0;
+}
+
 .data-table-extensions {
   margin-bottom: 10px;
   padding: 0;
