--- a/src/screens/Tracker/styles.module.scss
+++ b/src/screens/Tracker/styles.module.scss
@@ -6,7 +6,8 @@
   justify-content: center;
   text-align: center;
 
-  &_logoutButton {
-    margin-top: 30px;
+  &_logo {
+    margin: 0 auto 40px;
+    width: 80px;
   }
 }
