--- a/src/screens/Registration/styles.module.scss
+++ b/src/screens/Registration/styles.module.scss
@@ -1,55 +1,92 @@
 @import '../../scss/variables';
 
 .Registration {
-  padding: 50px;
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
 
-  &_card {
-    padding: 30px;
-    margin: 0 auto;
-    max-width: 600px;
-    width: 100%
-  }
+  &_sidebar {
+    align-items: center;
+    background: -webkit-gradient(linear,left top,right top,from(#a0a0a0),color-stop(49%,#bababa),color-stop(50%,#ED5565),to(#2fa9e0));
+    background: linear-gradient(90deg,#a0a0a0,#bababa 49%,#ED5565 50%,#2fa9e0);
+    background-position-x: right;
+    background-size: 205%;
+    color: #fff;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    width: 440px;
 
-  &_title {
-    margin-bottom: 20px !important;
-  }
-
-  &_withMargin {
-    margin-bottom: 15px;
-  }
-
-  &_qrCodeWrapper {
-    margin-bottom: 20px;
-    text-align: center;
-
-    &_removeQrCode {
-      background: $red-400;
-      border: 0;
-      border-radius: 4px;
-      color: $neutral-0;
-      cursor: pointer;
-      display: block;
-      margin: 10px auto 0;
-      padding: 5px 10px;
+    &_logo {
+      height: 400px;
     }
   }
 
-  &_buttonGroup {
-    margin-top: 40px;
+  &_container {
+    width: calc(100% - 440px);
 
-    &_button {
-      width: 100%;
+    &_overflow {
+      height: calc(100vh - 86px);
+      overflow: auto;
+      padding: 64px 0;
     }
 
-    &_buttonText {
-      align-items: center;
+    &_form {
       display: flex;
-      justify-content: center;
-    }
+      flex-direction: column;
+      margin: 0 auto;
+      max-width: 560px;
+      padding: 0 32px;
 
-    &_spinner {
-      margin-left: 12px;
-      width: auto !important;
+      &_title {
+        margin-bottom: 20px !important;
+      }
+
+      &_withMargin {
+        margin-bottom: 15px;
+      }
+
+      &_qrCodeWrapper {
+        margin-bottom: 20px;
+        text-align: center;
+    
+        &_removeQrCode {
+          background: $red-400;
+          border: 0;
+          border-radius: 4px;
+          color: $neutral-0;
+          cursor: pointer;
+          display: block;
+          margin: 10px auto 0;
+          padding: 5px 10px;
+        }
+      }
+    }
+    
+    &_footer {
+      box-shadow: $shadow-raised;
+      padding: 20px;
+
+      &_wrapper {
+        margin: 0 auto;
+        max-width: 560px;
+        padding: 0 32px;
+      }
+      
+      &_button {
+        width: 100%;
+      }
+  
+      &_buttonText {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+      }
+  
+      &_spinner {
+        margin-left: 12px;
+        width: auto !important;
+      }
     }
   }
 }
