--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -29,11 +29,6 @@ body {
 }
 
 // DataTable
-.data-table-custom-ul {
-  margin: 0;
-  padding: 0;
-}
-
 .data-table-extensions {
   margin-bottom: 10px;
   padding: 0;
@@ -54,10 +49,6 @@ body {
 
 // Mapbox
 .mapboxgl-popup-content {
-  min-width: 200px;
-}
-
-.mapboxgl-popup-content p {
-  font-size: 0.8rem;
-  margin: 0;
+  min-width: 300px;
+  padding: 15px;
 }
