--- a/src/screens/Map/MapTabs/styles.module.scss
+++ b/src/screens/Map/MapTabs/styles.module.scss
@@ -1,6 +1,6 @@
 @import '../../../scss/variables';
 
-.MapSidebar {
+.MapTabs {
   &_tabs {
     background-color: $neutral-0;
     border-radius: 10px;
@@ -36,7 +36,7 @@
     position: fixed;
     right: 20px;
     top: 20px;
-    z-index: 2;
+    z-index: 3;
 
     &_closeButton {
       margin-bottom: 30px;
@@ -46,14 +46,15 @@
       top: 20px;
 
       &_icon {
-        color: $red-400 !important;
+        color: $neutral-0 !important;
       }
     }
 
     &_title {
-      border-bottom: 1px solid $neutral-300;
-      margin-bottom: 20px !important;
-      padding-bottom: 20px;
+      background-color: $blue-400;
+      color: $neutral-0;
+      margin: -20px -20px 20px !important;
+      padding: 20px;
       text-transform: uppercase;
     }
 
@@ -95,22 +96,12 @@
       }
     }
 
-    &_logoutButton {
-      font-size: 0.9em !important;
-      padding: 8px 12px !important;
+    &_viewHistoryButton {
+      color: $blue-400;
     }
 
-    &_offices {
-      margin: 0;
-      padding: 0;
-      
-      &_list {
-        color: $red-400;
-
-        &___okay {
-          color: $green-400;
-        }
-      }
+    &_viewLocationButton {
+      color: $green-400;
     }
   }
 }
