--- a/src/screens/Map/styles.module.scss
+++ b/src/screens/Map/styles.module.scss
@@ -1,6 +1,48 @@
+@import '../../scss/variables';
+
 .Map {
   &_container {
     height: 100vh;
     width: 100vw;
+  }
+}
+
+.MapFilter {
+  background-color: $neutral-0;
+  border-radius: 10px;
+  box-shadow: $shadow-normal;
+  right: 20px;
+  min-width: 200px;
+  padding: 16px;
+  position: absolute;
+  top: 20px;
+  z-index: 2;
+}
+
+.MapLegend {
+  background-color: $neutral-0;
+  border-radius: 10px;
+  box-shadow: $shadow-normal;
+  left: 20px;
+  min-width: 200px;
+  padding: 16px;
+  position: absolute;
+  top: 200px;
+  z-index: 2;
+
+  &_lists {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    &_list {
+      align-items: center;
+      display: flex;
+      margin-top: 15px;
+
+      &_icon {
+        margin-right: 10px;
+      }
+    }
   }
 }
