--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -52,3 +52,8 @@ body {
   min-width: 300px;
   padding: 15px;
 }
+
+// React Modal
+.ReactModal__Overlay--after-open {
+  opacity: 1 !important;
+}
